# nano-vllm

./: example.py  plan-npu.md  pyproject.toml
nanovllm/: config.py
nanovllm/engine/: llm_engine.py  model_runner.py
nanovllm/layers/: attention.py  embed_head.py  linear.py
nanovllm/models/: qwen3.py
tests/: conftest.py  test_config.py  test_inference.py
